; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/png/extr_rpng.c_png_parse_ihdr.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/png/extr_rpng.c_png_parse_ihdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.png_ihdr = type { i64, i64, i8*, i8*, i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, %struct.png_ihdr*)* @png_parse_ihdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @png_parse_ihdr(i8** %0, %struct.png_ihdr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca %struct.png_ihdr*, align 8
  store i8** %0, i8*** %4, align 8
  store %struct.png_ihdr* %1, %struct.png_ihdr** %5, align 8
  %6 = load i8**, i8*** %4, align 8
  %7 = getelementptr inbounds i8*, i8** %6, i64 8
  store i8** %7, i8*** %4, align 8
  %8 = load i8**, i8*** %4, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i64 0
  %10 = call i8* @dword_be(i8** %9)
  %11 = ptrtoint i8* %10 to i64
  %12 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %13 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load i8**, i8*** %4, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 4
  %16 = call i8* @dword_be(i8** %15)
  %17 = ptrtoint i8* %16 to i64
  %18 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %19 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %18, i32 0, i32 1
  store i64 %17, i64* %19, align 8
  %20 = load i8**, i8*** %4, align 8
  %21 = getelementptr inbounds i8*, i8** %20, i64 8
  %22 = load i8*, i8** %21, align 8
  %23 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %24 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %23, i32 0, i32 6
  store i8* %22, i8** %24, align 8
  %25 = load i8**, i8*** %4, align 8
  %26 = getelementptr inbounds i8*, i8** %25, i64 9
  %27 = load i8*, i8** %26, align 8
  %28 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %29 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %28, i32 0, i32 5
  store i8* %27, i8** %29, align 8
  %30 = load i8**, i8*** %4, align 8
  %31 = getelementptr inbounds i8*, i8** %30, i64 10
  %32 = load i8*, i8** %31, align 8
  %33 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %34 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %33, i32 0, i32 4
  store i8* %32, i8** %34, align 8
  %35 = load i8**, i8*** %4, align 8
  %36 = getelementptr inbounds i8*, i8** %35, i64 11
  %37 = load i8*, i8** %36, align 8
  %38 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %39 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %38, i32 0, i32 3
  store i8* %37, i8** %39, align 8
  %40 = load i8**, i8*** %4, align 8
  %41 = getelementptr inbounds i8*, i8** %40, i64 12
  %42 = load i8*, i8** %41, align 8
  %43 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %44 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %43, i32 0, i32 2
  store i8* %42, i8** %44, align 8
  %45 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %46 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = icmp eq i64 %47, 0
  br i1 %48, label %54, label %49

49:                                               ; preds = %2
  %50 = load %struct.png_ihdr*, %struct.png_ihdr** %5, align 8
  %51 = getelementptr inbounds %struct.png_ihdr, %struct.png_ihdr* %50, i32 0, i32 1
  %52 = load i64, i64* %51, align 8
  %53 = icmp eq i64 %52, 0
  br i1 %53, label %54, label %55

54:                                               ; preds = %49, %2
  store i32 0, i32* %3, align 4
  br label %56

55:                                               ; preds = %49
  store i32 1, i32* %3, align 4
  br label %56

56:                                               ; preds = %55, %54
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}

declare dso_local i8* @dword_be(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
